--- a/accounting/templates/accounting/deposit.html
+++ b/accounting/templates/accounting/deposit.html
@@ -107,7 +107,7 @@
                                     <td>{{income.bank}}</td>
                                     <td>{{income.commission}}</td>
                                     <td>{{income.acc_income}}</td>
-                                    <td>{{income.used_income}}</td>
+                                    <td>{{income.used_price}}</td>
                                     <td>{{income.state}}</td>
                                 </tr>
                                 {% endfor %}
