--- a/accounting/templates/accounting/regularly_collect.html
+++ b/accounting/templates/accounting/regularly_collect.html
@@ -22,7 +22,7 @@
     <form action="">
         <div class="searchTool">
             <label class="searchName">날짜검색</label>
-            <input autocomplete="off" name="date" type="date" value="" class="inputModules">
+            <input autocomplete="off" name="date" type="month" value="" class="inputModules">
             <input autocomplete="off" type="submit" value="검색" class="btnModules dateSearchBtn">
         </div>
     </form>
@@ -65,23 +65,24 @@
         </table>
         <div class="collectScrollBox">
             <table class="collectTable">
+                
                 <tr class="collectDateBox collectionUnprocessed">
                     <td>
                         <input autocomplete="off"type="radio" name="loadPrice" class="routeSelect">
                     </td>
                     <td>
-                        <div>동수원</div>
+                        <div></div>
                     </td>
                     <td>
-                        <div>동수원 [06시 새벽조출, 퇴근]장안구청 앞 ▶</div>
-                        <div>한국 쓰리엠 출근</div>
+                        <div>▶</div>
+                        <div></div>
                     </td>
                     <td>
-                        <div>월화수목금토일</div>
+                        <div></div>
                     </td>
-                    <td>출근</td>
-                    <td>04:30 ~ 07:00</td>
-                    <td>1,250,000</td>
+                    <td></td>
+                    <td> ~ </td>
+                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -92,6 +93,7 @@
                     <td></td>
                     <td></td>
                 </tr>
+                
             </table>
         </div>
     </div>
